fixed: https issue; fixed: wrong logo place issue; prepare: profiles;

--- a/translate.html
+++ b/translate.html
@@ -13,6 +13,9 @@
             from: '*',
             first: 'ru',
             second: 'en',
+            langpair: [
+                
+            ],
             additionalDetection: true,
             convertToLowerCase: true
         };
