bug fixes; added 'latest' language in option; start improving themes; many code optimizations; speed up scripts; v 1.3 =)

--- a/options.html
+++ b/options.html
@@ -98,6 +98,7 @@
                         var langs = '';
                         if(id == 'from') {
                             langs += '<option value="auto">Auto-detect language</option>';
+                            langs += '<option value="latest">Latest language</option>';
                             langs += '<option value="-" disabled="disabled">-</option>';
                         }
                         for(var lng in o.values) {
