--- a/options.html
+++ b/options.html
@@ -67,6 +67,8 @@
 
             tab(t);
 
+            $('theme').value = storage.theme;
+
             $('options').style.display = '';
             $('loading').style.display = 'none';
         }
@@ -84,6 +86,8 @@
                 return;
             }
             lastTab = lt;
+
+            storage.theme = $('theme').value;
 
             localStorage['options'] = JSON.stringify(storage);
 
@@ -357,6 +361,17 @@
         div.save:hover {
             color: #000000;
         }
+        div.additional-options {
+            min-width: 70%;
+            display: inline-block;
+            margin: 10px auto 0;
+            text-align: left;
+            margin-top: 3px;
+            padding: 3px;
+            background: #E1E6EE;
+            border: 1px solid #B8CBDE;
+            -webkit-box-sizing: border-box;
+        }
     </style>
 </head>
 <body onload="read()">
@@ -411,6 +426,13 @@
                 <i>convert words to lower case before translation</i>
             </p>
         </div>
+    </div>
+    <div class="additional-options">
+        Theme:
+        <select id="theme">
+            <option value="black">Black</option>
+            <option value="white">White</option>
+        </select>
     </div>
     <div></div>
     <div class="save" onclick="commit();">Save</div>
