--- a/simplify.html
+++ b/simplify.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="services/bit.ly.js"></script>
 <script type="text/javascript" src="services/u.to.js"></script>
 <script type="text/javascript" src="services/is.gd.js"></script>
+<script type="text/javascript" src="services/g.ua.js"></script>
 </head>
 <body><input type="text" value="xx" id="field" /><canvas id="canvas" width="18" height="18"></canvas></body>
 </html>
