--- a/simplify.html
+++ b/simplify.html
@@ -13,5 +13,9 @@
 <script type="text/javascript" src="services/is.gd.js"></script>
 <script type="text/javascript" src="services/g.ua.js"></script>
 </head>
-<body><input type="text" value="xx" id="field" /><canvas id="canvas" width="18" height="18"></canvas></body>
+<body>
+  <input type="text" value="xx" id="field" />
+  <canvas id="canvas" width="19" height="19"></canvas>
+  <img id="loader" src="graphics/loading.png" />
+</body>
 </html>
